Fix PiratesEffect CombatZoneEffect